--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- head section -->
     <header>
-        <nav class="nav-container">
+        <!-- <nav class="nav-container">
             <div class="logo">
                 <h3>Influencer products</h3>
             </div>
@@ -23,22 +23,20 @@
                 <li><img src="./icons/search.svg" alt=""></li>
                 <li><img src="./icons/cart.svg" alt=""></li>
             </div>
-        </nav>
+        </nav> -->
 
         <div class="banner-container">
             <div class="banner-content">
                 <h1 class="banner-title">Start your Journey as Influencer</h1>
                 <div class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum
                     sed scelerisque eros. Lectus faucibus.</div>
-                    <button class="btn-primary">Preebook now &#8594 </button>
+                <button class="btn-primary">Preebook now &#8594 </button>
             </div>
             <div class="banner-img">
                 <img src="./images/main-camera.png" alt="">
             </div>
         </div>
-    </header>
-    <!-- main section -->
-    <main>
+
         <section class="market-place">
             <img src="./logos/Alibaba.svg" alt="" class="market-place-logo">
             <img src="./logos/Amazon.svg" alt="" class="market-place-logo">
@@ -48,6 +46,93 @@
             <img src="./logos/Walmart.svg" alt="" class="market-place-logo">
             <img src="./logos/Target.svg" alt="" class="market-place-logo">
         </section>
+    </header>
+    <!-- main section -->
+    <main>
+        <section class="collection-section">
+            <h3 class="collecton-title">Popular Collection</h3>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Project Title</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+
+                </div>
+                <div class="card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Project Title</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+
+                </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Project Title</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+
+                </div>
+                </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Project Title</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+
+                </div>
+                </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Project Title</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+
+                </div>
+                </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Project Title</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+
+                </div>
+                </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Project Title</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+
+                </div>
+                </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Project Title</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+
+                </div>
+                </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Project Title</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+
+                </div>
+                
+            </div>
+        </section>
+
+
     </main>
     <!-- footer section -->
     <footer></footer>
