--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
                     <p>Wordwide shifting available Buyers protection possible!</p>
 
                 </div>
-            <div class="card-container">
                 <div class="card">
                     <img src="./images/tripod.png" alt="">
                     <h3>Project Title</h3>
@@ -74,8 +73,6 @@
                     <p>Wordwide shifting available Buyers protection possible!</p>
 
                 </div>
-                </div>
-            <div class="card-container">
                 <div class="card">
                     <img src="./images/tripod.png" alt="">
                     <h3>Project Title</h3>
@@ -83,8 +80,6 @@
                     <p>Wordwide shifting available Buyers protection possible!</p>
 
                 </div>
-                </div>
-            <div class="card-container">
                 <div class="card">
                     <img src="./images/tripod.png" alt="">
                     <h3>Project Title</h3>
@@ -92,8 +87,6 @@
                     <p>Wordwide shifting available Buyers protection possible!</p>
 
                 </div>
-                </div>
-            <div class="card-container">
                 <div class="card">
                     <img src="./images/tripod.png" alt="">
                     <h3>Project Title</h3>
@@ -101,8 +94,6 @@
                     <p>Wordwide shifting available Buyers protection possible!</p>
 
                 </div>
-                </div>
-            <div class="card-container">
                 <div class="card">
                     <img src="./images/tripod.png" alt="">
                     <h3>Project Title</h3>
@@ -110,8 +101,6 @@
                     <p>Wordwide shifting available Buyers protection possible!</p>
 
                 </div>
-                </div>
-            <div class="card-container">
                 <div class="card">
                     <img src="./images/tripod.png" alt="">
                     <h3>Project Title</h3>
@@ -119,8 +108,6 @@
                     <p>Wordwide shifting available Buyers protection possible!</p>
 
                 </div>
-                </div>
-            <div class="card-container">
                 <div class="card">
                     <img src="./images/tripod.png" alt="">
                     <h3>Project Title</h3>
@@ -128,10 +115,26 @@
                     <p>Wordwide shifting available Buyers protection possible!</p>
 
                 </div>
-                
             </div>
+            <h5 class="more">See More &#8594</h5>
         </section>
+        <!-- feature -->
 
+        <section>
+            <div class="feature-container">
+                <img src="./images/gear.png" alt="">
+            
+            <div class="feature-content">
+                <h2 class="feature-title">Featured products at one place</h2>
+                <p class="feature-description">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+                <button class="btn-primary btn-join">Join Now &#8594</button>
+            </div>
+        </div>
+
+        </section>
 
     </main>
     <!-- footer section -->
