--- a/index.html
+++ b/index.html
@@ -138,7 +138,16 @@
 
     </main>
     <!-- footer section -->
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <h3 class="footer-title"></h3>
+            <small></small>
+            <small></small>
+            <div class="footer-img-container">
+                <img src="./" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
